--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "git": "^0.1.5",
     "mongoose": "^7.6.0",
     "morgan": "^1.10.0",
