--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/lifedesigner88/wetube-reloaded#readme",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "connect-mongo": "^5.1.0",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "git": "^0.1.5",
